--- a/styles.css
+++ b/styles.css
@@ -74,10 +74,18 @@ a {
 
 .contact-text {
     width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .list-item {
     margin-bottom: 10px;
+}
+
+.item-title {
+    font-size: 16px;
+    font-weight: 600;
 }
 
 form {
