--- a/styles.css
+++ b/styles.css
@@ -148,3 +148,43 @@ form button {
     justify-content: center;
     align-items: center;
 }
+
+@media (max-width: 320px) {
+    body {
+        margin-top: 20px;
+        margin-left: 20px;
+        margin-right: 20px;
+        font-size: 90%;
+    }
+
+    #title-section {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 15px;
+    }
+
+    .image-item {
+        width: 100%;
+    }
+
+    .contact-content {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .contact-text, form {
+        width: 100%;
+    }
+}
+
+@media (max-width: 640px) {
+    body {
+        margin-top: 30px;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+    
+    .image-item {
+        width: calc(50% - 15px);
+    }
+}
