--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,10 @@
 }
 
 body {
-    background-color: #faf6f2;
+    background-color: #f0f0f0;
     color: #233675;
     font-family: "Ubuntu", sans-serif;
-    margin-top: 30px;
+    padding-top: 30px;
     margin-left: 40px;
     margin-right: 40px;
 }
@@ -20,9 +20,10 @@ a {
 
 #title {
     font-weight: 800;
-    font-size: 40px;
+    font-size: 32px;
     margin-bottom: 0;
     margin-top: 0;
+    padding-right: 10px;
 }
 
 #title:hover {
@@ -33,17 +34,19 @@ a {
     display: inline-flex;
     align-items: center;
     gap: 10px;
+    font-size: 16px;
+    font-weight: 500;
 }
 
 .visualization-link p:hover {
     text-decoration: underline;
 }
 
-#title-section {
+#nav-section {
     display: inline-flex;
     width: 100%;
     align-items: center;
-    justify-content: space-between;
+    gap: 20px;
     margin-bottom: 40px;
 }
 
